--- a/app.json
+++ b/app.json
@@ -16,9 +16,28 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "6f4159c3-27fb-4aef-9797-e80cd2eed43f"
+      }
+    },
+    "owner": "tanim2025",
+    "android": {
+      "package": "com.brainstation23.aimeetingsummary"
+    },
+    "build": {
+      "preview": {
+        "distribution": "internal"
+      }
     }
   }
 }
