--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-linking": "~7.1.7",
     "expo-mail-composer": "^14.1.5",
     "expo-router": "~5.1.4",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
